--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "A machine learning practitioner's blog"
+author: "Ajit"
+description: "This is a log of my few experiments that yielded usable results (while most failed) " # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+twitter_username: "ajitvraj"
+github_username: "ajitrajasekharan"
+linkedin_username: "ajit-rajasekharan-b854795"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
