--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description: "This is a log of my few experiments that yielded usable results (w
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+#email: "example@mail.com"
 twitter_username: "ajitvraj"
 github_username: "ajitrajasekharan"
-linkedin_username: "ajit-rajasekharan-b854795"
+#linkedin_username: "ajit-rajasekharan-b854795"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
