--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "This is a log of my few experiments that yielded usable results (w
 #email: "example@mail.com"
 twitter_username: "ajitvraj"
 github_username: "ajitrajasekharan"
-#linkedin_username: "ajit-rajasekharan-b854795"
+linkedin_username: "ajit-rajasekharan-b854795"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
