--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "A machine learning practitioner's blog"
 author: "Ajit Rajasekharan"
-description: "This is a log of my few experiments that yielded usable results (while others failed) " # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "This is a log of what I learn and work I have done that yielded usable results" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
